Use Java 17 features in source code
https://docs.openrewrite.org/running-recipes/popular-recipe-guides/migrate-to-java-17
provided the transformations and they all pass automated tests.

Several nice readability improvements are provided by Java 17.